# chan-dl

./: .gitignore  4chandl (copy 1).py  4chandl.py  README.md  requirements.txt
Archive/: 4chandl old.py  4chandlv15works.py
cli/: MANIFEST.in  Makefile  pyproject.toml  setup.py
cli/chan_downloader/: __init__.py  cli.py  config.py  core.py  utils.py
docs/: examples.md
